--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@breve/gatsby-theme-novela-breve": "^0.*",
     "@types/youtube": "0.0.38",
     "codemirror": "^5.58.3",
+    "core-js": "^3.8.0",
     "emotion-theming": "^10.0.27",
     "enzyme": "^3.11.0",
     "gatsby": "^2.13.41",
