--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "enzyme": "^3.11.0",
     "gatsby": "^2.28.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts-v2": "0.0.6",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.40",
     "gatsby-plugin-theme-ui": "^0.3.4",
